--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
             "email": "vic@1tomany.com"
         }
     ],
+    "config": {
+        "sort-packages": true
+    },
     "keywords": [
         "oauth2",
         "intuit",
@@ -19,7 +22,8 @@
         "league/oauth2-client": "^2.7"
     },
     "require-dev": {
-        "phpunit/phpunit": "^11.4"
+        "phpunit/phpunit": "^11.4",
+        "phpstan/phpstan": "^2.0"
     },
     "autoload": {
         "psr-4": {
