--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
         "league/oauth2-client": "^2.7"
     },
     "require-dev": {
-        "phpunit/phpunit": "^11.4",
-        "phpstan/phpstan": "^2.0"
+        "phpstan/phpstan": "^2.0",
+        "phpunit/phpunit": "^11.4"
     },
     "autoload": {
         "psr-4": {
