--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     },
     "autoload": {
         "psr-4": {
-            "OneToMany\\OAuth2\\Intuit\\": "src/"
+            "OneToMany\\OAuth2\\Client\\": "src/"
         },
         "exclude-from-classmap": [
             "/Tests/"
@@ -35,7 +35,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "OneToMany\\OAuth2\\Intuit\\Tests\\": "tests/"
+            "OneToMany\\OAuth2\\Client\\Tests\\": "tests/"
         }
     }
 }
